@@ -1,3 +1,9 @@
+2003-05-15  Akinori Ito <aito@fw.ipsj.or.jp>
+
+	* [w3m-dev 03902] Re: table rendering
+	* table.c (check_relative_width): check n_leftcell
+				check w <= r
+
 2003-05-14  ABE Yuji <cbo46560@pop12.odn.ne.jp>
 
 	* [w3m-dev 03901] body with status-code 401
